--- a/scss/scott/_custom.scss
+++ b/scss/scott/_custom.scss
@@ -4,7 +4,7 @@
     margin-right: -5rem;
   }
 
-  .gutters-50 > [class*="col-"] {
+  .gutters-50>[class*="col-"] {
     padding-left: 5rem;
     padding-right: 5rem;
   }
@@ -14,7 +14,7 @@
     margin-right: -4rem;
   }
 
-  .gutters-40 > [class*="col-"] {
+  .gutters-40>[class*="col-"] {
     padding-left: 4rem;
     padding-right: 4rem;
   }
@@ -24,7 +24,7 @@
     margin-right: -3rem;
   }
 
-  .gutters-30 > [class*="col-"] {
+  .gutters-30>[class*="col-"] {
     padding-left: 3rem;
     padding-right: 3rem;
   }
@@ -70,7 +70,7 @@
     font-family: "DaylightDreams";
 
     @media screen and (min-width: 1400px) {
-      font-size: 7rem;
+      font-size: 157px;
     }
   }
 
@@ -169,6 +169,7 @@
 }
 
 .hat-img_carousel {
+
   /* .slick-list::before,
   .slick-list::after {
     background: #fff !important;
@@ -284,7 +285,7 @@
 .btn-wrap {
   margin-top: 2rem;
 
-  & > a {
+  &>a {
     padding: 0.5rem;
     font-family: "Athiti-Bold";
     color: #3e4852;
@@ -400,7 +401,7 @@
   .about-desc {
     @media screen and (min-width: 1400px) {
       margin-bottom: 20rem;
-      max-width: 45%;
+      max-width: 70%;
     }
   }
 }
@@ -417,26 +418,26 @@
   }
 
   .row {
-    & > div {
+    &>div {
       padding-top: 3rem;
       padding-bottom: 3rem;
     }
 
     @media screen and (min-width: 1400px) {
-      & > div {
+      &>div {
         padding: 3rem;
       }
     }
 
-    & > div:first-child {
+    &>div:first-child {
       background-color: #fdf5f4;
     }
 
-    & > div:nth-child(2) {
+    &>div:nth-child(2) {
       background-color: #e8ffff;
     }
 
-    & > div:last-child {
+    &>div:last-child {
       background-color: #f0f8f1;
     }
   }
@@ -501,6 +502,7 @@ body {
   .page-banner .searchwrap {
     margin-left: 0rem;
   }
+
   .page-banner .searchwrap {
     margin-left: 0;
   }
@@ -508,142 +510,4 @@ body {
 
 body .page-banner .searchwrap .searchandfilter {
   width: 75%;
-}
-
-/* ----- CSS ----- */
-#popup {
-  z-index: 9999;
-  border-top: 10px solid #dbb383;
-  display: inline-block;
-  opacity: 0;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  padding: 0;
-  transform: translate(-50%, -50%);
-  background: #f8f8fe;
-
-  box-shadow: 1px 1px 0.5em 0 rgba(0, 0, 0, 0.5);
-  transition: opacity 0.3s ease-in-out;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-
-  padding: 5rem 0;
-
-  .popup-banner-left-wrap {
-    @media screen and (max-width: 768px) {
-      padding: 2rem;
-    }
-  }
-  h1 {
-    font-size: 7rem;
-    @media screen and (max-width: 1748px) {
-      font-size: 5rem;
-    }
-    @media screen and (max-width: 768px) {
-      font-size: 3rem;
-    }
-  }
-  p {
-    font-size: 3rem;
-    font-family: "Athiti-Light";
-    @media screen and (max-width: 1748px) {
-      font-size: 2rem;
-    }
-    @media screen and (max-width: 768px) {
-      font-size: 1.3rem;
-    }
-  }
-  a {
-    font-family: "Athiti-Bold";
-    font-size: 1rem;
-    padding: 0.5rem 2rem;
-    @media screen and (max-width: 1748px) {
-      font-size: 1rem;
-      padding: 0.5rem 1rem;
-    }
-    @media screen and (max-width: 768px) {
-      padding: 0.5rem 1rem;
-      font-size: 0.8rem;
-    }
-  }
-  .popup-big-can-img {
-    text-align: center;
-    img {
-      width: 60%;
-      margin: auto;
-
-      @media screen and (max-width: 768px) {
-        width: 80%;
-      }
-    }
-    @media screen and (min-width: 768px) {
-      position: absolute;
-      left: 0;
-      bottom: auto;
-      top: 50%;
-      transform: translate(-10%, -50%);
-      width: 100%;
-      max-width: 100%;
-      img {
-        width: 100%;
-      }
-    }
-  }
-}
-
-#popup.hidden {
-  display: none;
-  z-index: 0;
-}
-#popup.fade-in {
-  opacity: 1;
-}
-
-#stores {
-  h5 {
-    font-family: "Athiti-Light";
-    letter-spacing: 5px;
-  }
-  h2 {
-    font-family: "Athiti-MEDIUM";
-  }
-}
-.aboutus-section-2,
-.aboutus-section-3 {
-  overflow: hidden;
-  position: relative;
-  .section-content {
-    position: relative;
-  }
-}
-.aboutus-section-2::before {
-  background-color: #f5f5e9;
-}
-
-.aboutus-section-3::before {
-  background-color: #edf0f8;
-}
-.aboutus-section-2::before,
-.aboutus-section-3::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 80%;
-  height: 100%;
-}
-
-#stores h2 {
-  position: relative;
-}
-#stores h2:after {
-  content: "";
-  position: absolute;
-  bottom: -7px;
-  left: 0;
-  width: 1rem;
-  transform: translate(0%, 0);
-  border-bottom: 5px solid #ebdfc5;
 }
