--- a/scss/section/_navbar.scss
+++ b/scss/section/_navbar.scss
@@ -1,4 +1,5 @@
 .bi-navbar {
+
   /* box-shadow: 0 0 16px 4px rgba(36, 47, 95, 0.1); */
   .navbar-brand.logo {
     font-size: 1.5rem;
@@ -8,9 +9,11 @@
 
   .nav-item {
     position: relative;
+
     .nav-link {
       font-size: $small-font-size;
       text-transform: uppercase;
+
       &::before {
         content: "";
         width: 0;
@@ -27,7 +30,7 @@
         outline: none;
 
         &::before {
-          border-color: $primary;
+          border-color: $yellow;
         }
       }
 
@@ -48,9 +51,11 @@
 
 .search-box {
   max-width: 22.5rem;
+
   @media screen and (min-width: 1400px) {
     margin: auto;
   }
+
   position: relative;
   transition: all 0.3s;
 
@@ -133,11 +138,12 @@
   font-size: 0.8125rem;
   border: none;
 
-  & > li {
+  &>li {
+
     &:hover,
     &:focus {
       a {
-        background-color: $primary;
+        background-color: $yellow;
         color: $white;
       }
     }
@@ -148,6 +154,7 @@
   .dropdown {
     position: relative;
     padding-right: 0.9rem;
+
     .dropdown-toggle-split {
       position: absolute;
       display: flex;
@@ -157,12 +164,14 @@
       right: 0;
       padding: 1rem 0.3rem;
       cursor: pointer;
+
       &:hover {
         color: $primary;
       }
     }
   }
 }
+
 @media screen and (max-width: 992px) {
   .bi-navbar {
     .nav-item {
@@ -196,8 +205,7 @@
   .navbar-collapse {
     border-top: 1px solid $bg-s-light;
     margin-top: 0.6rem;
-    padding-bottom: 2rem;
-    background-color: #dbb383 !important;
+    background-color: $yellow;
   }
 
   .copyright {
@@ -225,10 +233,11 @@
 
         &::before {
           width: 60%;
-          border-color: $primary;
+          border-color: $yellow;
         }
       }
     }
+
     .dropdown:hover .dropdown-menu {
       display: block;
       top: 2rem;
@@ -236,7 +245,7 @@
   }
 
   .search-box {
-    width: 4rem;
+    width: 3rem;
     height: 3rem;
     cursor: pointer;
     border-radius: 25px;
@@ -249,7 +258,8 @@
       position: absolute;
       top: 0;
       right: 0;
-      border: 0;
+      border: 1px solid #dddddd;
+      background-color: $white;
       transition: all 0.3s;
     }
 
@@ -289,19 +299,21 @@
       padding-right: 0;
     }
   }
+
   .bi-navbar .nav-item .nav-link {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 
     &::before {
       left: 1rem;
     }
   }
 }
+
 @media screen and (min-width: 1400px) {
   .bi-navbar .nav-item .nav-link {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 
     &::before {
       left: 50%;
@@ -314,6 +326,7 @@
   li {
     list-style: none;
     margin-right: 1rem;
+
     a {
       color: #ffffff;
       text-transform: uppercase;
@@ -338,9 +351,14 @@
   .nav-link {
     @media screen and (max-width: 991px) {
       color: #fff;
+
+      &.active:first-child a {
+        color: #fff;
+      }
     }
   }
 }
+
 
 .header-social,
 .woocommerce-nav {
@@ -356,16 +374,15 @@
 }
 
 .fixednav {
-  & > nav {
-    background: #fff;
-  }
 
   .header-social li a {
     color: #3e4352;
   }
+
   svg path {
     stroke: #3e4352;
   }
+
   .woocommerce-nav li {
     border: 2px solid #3e4352;
   }
