--- a/scss/section/_sections.scss
+++ b/scss/section/_sections.scss
@@ -71,6 +71,35 @@
     }
 }
 
+.product-tri-v2 {
+    position: relative;
+    isolation: isolate;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+        width: auto;
+        position: relative;
+    }
+
+    img:first-child {
+        height: 350px;
+    }
+
+    img:nth-child(2) {
+        height: 250px;
+        z-index: -1;
+        margin-left: -6rem;
+    }
+
+    img:nth-child(3) {
+        height: 170px;
+        z-index: -2;
+        margin-left: -4rem;
+    }
+}
+
 .br-meta {
     position: relative;
     display: flex;
@@ -205,11 +234,13 @@
 }
 
 @media screen and (max-width: 767px) {
+
     /* .product-tri img{
         opacity: 1 !important;
         transform: translate(0, 0) !important;
     } */
 }
+
 @media screen and (min-width: 768px) {
     .product-tri {
         margin-bottom: 0;
@@ -230,6 +261,22 @@
         }
     }
 
+    .product-tri-v2 {
+        img:first-child {
+            height: 650px;
+        }
+
+        img:nth-child(2) {
+            height: 550px;
+            margin-left: -14rem;
+        }
+
+        img:nth-child(3) {
+            height: 470px;
+            margin-left: -12rem;
+        }
+    }
+
     .arrow-nav {
         span {
             width: 4rem;
@@ -244,27 +291,28 @@
     }
 }
 
-@media screen and (min-width: 820px) and (max-width:850px){
+@media screen and (min-width: 820px) and (max-width:850px) {
     .product-tri {
         img:nth-child(2) {
             left: 18%;
         }
     }
 }
+
 @media screen and (min-width: 992px) {
     .product-tri {
         img:first-child {
-            height: 70vh;
+            height: 650px;
         }
 
         img:nth-child(2) {
-            height: 60vh;
+            height: 550px;
             top: 8%;
             left: 22%;
         }
 
         img:nth-child(3) {
-            height: 50vh;
+            height: 470px;
             top: 15%;
         }
     }
