--- a/scss/component/_variables.scss
+++ b/scss/component/_variables.scss
@@ -19,10 +19,10 @@ $bg-s-light: #f7f7fc;
 
 $white: #fff;
 $black: #000;
-$red: #e20e37;
+$red: #e2c29c;
 $blue: #00b8fa;
 $yellow: #dbb383;
-$primary: $red;
+$primary: $yellow;
 $secondary: $blue;
 
 $body-color: #6e7280;
