--- a/scss/component/_mixins.scss
+++ b/scss/component/_mixins.scss
@@ -15,8 +15,9 @@
     }
 
     .btn-check:focus+&,
+    &:active,
     &:focus {
-        box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
+        box-shadow: 0 0 0 $btn-focus-width rgba($primary, .5);
     }
 
     .btn-check:checked+&,
@@ -97,30 +98,31 @@
 
 // scss-docs-end btn-outline-variant-mixin
 
-%flex-a-center{
+%flex-a-center {
     display: flex;
     align-items: center;
 }
 
-%flex-j-center{
+%flex-j-center {
     display: flex;
     justify-content: center;
 }
 
-%flex-a-center-j-center{
-	display: flex;
-	align-items: center;
-	justify-content: center;
+%flex-a-center-j-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-%flex-a-center-j-between{
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+%flex-a-center-j-between {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-%hover-underline{
+%hover-underline {
     position: relative;
+
     &::before {
         content: '';
         width: 0;
@@ -143,10 +145,10 @@
     }
 }
 
-%radial-grad{
-    background: rgb(253,253,254);
-    background: -moz-radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(251,251,253,1) 15%, rgba(255,255,255,1) 30%, rgba(248,248,252,1) 30%, rgba(250,251,255,1) 45%, rgba(244,246,251,1) 45%, rgba(246,248,252,1) 60%, rgba(240,243,250,1) 60%, rgba(220,231,248,1) 90%);
-    background: -webkit-radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(251,251,253,1) 15%, rgba(255,255,255,1) 30%, rgba(248,248,252,1) 30%, rgba(250,251,255,1) 45%, rgba(244,246,251,1) 45%, rgba(246,248,252,1) 60%, rgba(240,243,250,1) 60%, rgba(220,231,248,1) 90%);
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(251,251,253,1) 15%, rgba(255,255,255,1) 30%, rgba(248,248,252,1) 30%, rgba(250,251,255,1) 45%, rgba(244,246,251,1) 45%, rgba(246,248,252,1) 60%, rgba(240,243,250,1) 60%, rgba(220,231,248,1) 90%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#dce7f8",GradientType=1);
+%radial-grad {
+    background: rgb(253, 253, 254);
+    background: -moz-radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 15%, rgba(251, 251, 253, 1) 15%, rgba(255, 255, 255, 1) 30%, rgba(248, 248, 252, 1) 30%, rgba(250, 251, 255, 1) 45%, rgba(244, 246, 251, 1) 45%, rgba(246, 248, 252, 1) 60%, rgba(240, 243, 250, 1) 60%, rgba(220, 231, 248, 1) 90%);
+    background: -webkit-radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 15%, rgba(251, 251, 253, 1) 15%, rgba(255, 255, 255, 1) 30%, rgba(248, 248, 252, 1) 30%, rgba(250, 251, 255, 1) 45%, rgba(244, 246, 251, 1) 45%, rgba(246, 248, 252, 1) 60%, rgba(240, 243, 250, 1) 60%, rgba(220, 231, 248, 1) 90%);
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 15%, rgba(251, 251, 253, 1) 15%, rgba(255, 255, 255, 1) 30%, rgba(248, 248, 252, 1) 30%, rgba(250, 251, 255, 1) 45%, rgba(244, 246, 251, 1) 45%, rgba(246, 248, 252, 1) 60%, rgba(240, 243, 250, 1) 60%, rgba(220, 231, 248, 1) 90%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#dce7f8", GradientType=1);
 }
