--- a/scss/section/_sections.scss
+++ b/scss/section/_sections.scss
@@ -130,7 +130,7 @@
 }
 
 .arrow-nav {
-    position: fixed;
+    //position: fixed;
     right: 2rem;
     bottom: 2rem;
     z-index: 3;
@@ -162,15 +162,10 @@
     .opacity-25 {
         pointer-events: none;
     }
-
-    .down-section {
-        width: 4rem;
-        height: 4rem;
-    }
 }
 
 .product-nav {
-    position: fixed;
+    //position: fixed;
     left: 2rem;
     bottom: 2rem;
     z-index: 3;
@@ -233,12 +228,69 @@
     } */
 }
 
+@media screen and (max-width: 991px) {
+    .title-md {
+        font-size: 100px;
+    }
+}
+
 @media screen and (max-width: 767px) {
 
     /* .product-tri img{
         opacity: 1 !important;
         transform: translate(0, 0) !important;
     } */
+
+    .home-banner-img img {
+        max-height: 40vh;
+        object-fit: cover;
+        object-position: bottom;
+    }
+
+    .home-banner {
+        text-align: center;
+    }
+
+    div.banner-left-wrap {
+        margin-right: 0;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    .subtitle-sm {
+        font-size: 28px;
+        margin-bottom: 0;
+    }
+
+    .title-sm {
+        font-size: 100px;
+    }
+
+    .beer-nav-toggle {
+        display: none;
+    }
+
+    .shop-home {
+        min-height: 70vh;
+        isolation: isolate;
+
+        &.bg-gray {
+            background-color: $white;
+        }
+    }
+
+    .shop-bg-sm {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        min-height: 60vh;
+        z-index: -1;
+    }
+
+    .title-md {
+        font-size: 80px;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -272,19 +324,14 @@
         }
 
         img:nth-child(3) {
-            height: 470px;
+            height: 436px;
             margin-left: -12rem;
         }
     }
 
     .arrow-nav {
         span {
-            width: 4rem;
-            height: 4rem;
             border: 4px solid #444;
-        }
-
-        .down-section {
             width: 5rem;
             height: 5rem;
         }
