--- a/scss/section/_navbar.scss
+++ b/scss/section/_navbar.scss
@@ -210,6 +210,50 @@ div.offcanvas-menu {
   }
 }
 
+.search-box {
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
+  border-radius: 25px;
+  box-sizing: border-box;
+  margin: initial;
+
+  input,
+  button {
+    height: 3rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 1px solid #dddddd;
+    background-color: $white;
+    transition: all 0.3s;
+  }
+
+  input {
+    width: 0px;
+    line-height: 3rem;
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  &:hover,
+  &:focus,
+  &:valid {
+    input {
+      width: 300px;
+      visibility: visible;
+      opacity: 1;
+    }
+
+    button {
+      font-size: 1rem;
+      width: 2.2rem;
+      height: 2.2rem;
+      margin: 6px;
+    }
+  }
+}
+
 @media screen and (max-height: 670px) {
   div.offcanvas-menu ul.nav-menu a.nav-link {
     font-size: 26px;
@@ -221,7 +265,19 @@ div.offcanvas-menu {
   }
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 767px) {
+
+  .search-box:active input,
+  .search-box:hover input,
+  .search-box:focus input,
+  .search-box:focus-visible input,
+  .search-box:focus-within input,
+  .search-box:valid input {
+    width: 200px;
+  }
+}
+
+@media screen and (max-width: 991px) {
   .bi-navbar .navbar-brand.logo {
     padding: 0;
   }
@@ -252,9 +308,7 @@ div.offcanvas-menu {
     margin-top: 2rem;
     margin-bottom: 2rem;
   }
-}
 
-@media screen and (max-width: 991px) {
   .navbar-collapse {
     border-top: 1px solid $bg-s-light;
     margin-top: 0.6rem;
@@ -294,49 +348,6 @@ div.offcanvas-menu {
     .dropdown:hover .dropdown-menu {
       display: block;
       top: 2rem;
-    }
-  }
-
-  .search-box {
-    width: 3rem;
-    height: 3rem;
-    cursor: pointer;
-    border-radius: 25px;
-    box-sizing: border-box;
-    margin: initial;
-
-    input,
-    button {
-      height: 3rem;
-      position: absolute;
-      top: 0;
-      right: 0;
-      border: 1px solid #dddddd;
-      background-color: $white;
-      transition: all 0.3s;
-    }
-
-    input {
-      width: 0px;
-      line-height: 3rem;
-      opacity: 0;
-      visibility: hidden;
-    }
-
-    &:hover,
-    &:valid {
-      input {
-        width: 300px;
-        visibility: visible;
-        opacity: 1;
-      }
-
-      button {
-        font-size: 1rem;
-        width: 2.2rem;
-        height: 2.2rem;
-        margin: 6px;
-      }
     }
   }
 
